# hyp-runtime

./: .gitignore  CHANGELOG.md  CLI_README.md  Cargo.toml  HypnoScript.csproj  HypnoScript.sln  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PACKAGE_MANAGER.md  LICENSE  PACKAGE_MANAGER.md  README.md  RUST_README.md  deny.toml  install.sh  medium_test.hyp  minimal_test.hyp  package.json  simple_test.cs  simple_test.hyp  simple_test_v3.ps1  step_test.hyp  test.hyp  test_advanced.hyp  test_all_commands.ps1  test_all_enterprise_features.ps1  test_cli.bat  test_cli.cs  test_cli.ps1  test_comprehensive.hyp  test_enterprise_features.hyp  test_enterprise_v3.hyp  test_enterprise_v3.ps1  test_extended_features.hyp  test_rust_demo.hyp  test_simple.hyp  translate_docs.py  ultra_minimal.hyp
.github/: README.md  actions-config.yml  labeler.yml
.github/workflows/: README.md  build-and-release.yml  build-and-test.yml  ci.yml  dependency-update.yml  deploy-docs.yml  label.yml  main.yml  performance-monitoring.yml  release.yml  rust-build-and-release.yml  rust-build-and-test.yml  security-scan.yml  security.yml
HypnoScript.CLI/: AppLogger.cs  HypnoScript.CLI.csproj  Program.cs  SimpleTest.cs
HypnoScript.CLI.Tests/: HypnoScript.CLI.Tests.csproj  README.md  UnitTest1.cs
HypnoScript.CLI.Tests/TestData/: comments_only.hyp  invalid.hyp  invalid_block.hyp  large.hyp  valid.hyp
HypnoScript.CLI/Commands/: AnalyzeCommand.cs  ApiCommand.cs  BenchmarkCommand.cs  CompileCommand.cs  ConfigCommand.cs  DeployCommand.cs  DocsCommand.cs  FormatCommand.cs  InfoCommand.cs  LintCommand.cs  MonitorCommand.cs  OptimizeCommand.cs  ProfileCommand.cs  RunCommand.cs  TestCommand.cs  ValidateCommand.cs  WebCommand.cs
HypnoScript.Compiler/: HypnoScript.Compiler.csproj
HypnoScript.Compiler.Tests/: HypnoScript.Compiler.Tests.csproj  TypeCheckerTests.cs  UnitTest1.cs
HypnoScript.Compiler/Analysis/: TypeChecker.cs
HypnoScript.Compiler/CodeGen/: ILCodeGenerator.cs  ILCodeOptimizer.cs  WasmCodeGenerator.cs
HypnoScript.Compiler/Error/: ErrorReporter.cs
HypnoScript.Compiler/Interpreter/: HypnoInterpreter.cs  LoopInterpreter.cs  SessionInstance.cs  SessionInterpreter.cs
HypnoScript.Compiler/Session/: SessionFactory.cs  TranceifyFactory.cs
HypnoScript.Core/Configuration/: AppConfiguration.cs
HypnoScript.Core/Symbols/: Symbol.cs  SymbolTable.cs
HypnoScript.Core/Types/: HypnoType.cs
HypnoScript.Dokumentation/: .gitignore  README.md  docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.js
HypnoScript.Dokumentation/docs/: intro.md
HypnoScript.LexerParser/AST/: Nodes.cs
HypnoScript.LexerParser/Lexer/: Lexer.cs  Token.cs  TokenType.cs
HypnoScript.LexerParser/Parser/: HypnoParser.cs
HypnoScript.Runtime/: HypnoBuiltins.cs  HypnoScript.Runtime.csproj
HypnoScript.Runtime.Tests/: ArrayBuiltinsTests.cs  MathBuiltinsTests.cs  NetworkBuiltinsTests.cs  StringBuiltinsTests.cs  SystemBuiltinsTests.cs
HypnoScript.Runtime/Builtins/: ArrayBuiltins.cs  DictionaryBuiltins.cs  DocGenerator.cs  FileBuiltins.cs  HashingBuiltins.cs  HypnoticBuiltins.cs  MathBuiltins.cs  NetworkBuiltins.cs  PerformanceBuiltins.cs  StatisticsBuiltins.cs  StringBuiltins.cs  SystemBuiltins.cs  (+3 more)
examples/: trance.json
hypnoscript-cli/: Cargo.toml
hypnoscript-cli/src/: main.rs  package.rs
hypnoscript-compiler/: Cargo.toml  README.md  hypnoscript_output
hypnoscript-compiler/src/: async_builtins.rs  async_promise.rs  async_runtime.rs  channel_system.rs  interpreter.rs  lib.rs  native_codegen.rs  optimizer.rs  type_checker.rs  wasm_binary.rs  wasm_codegen.rs
hypnoscript-core/: Cargo.toml
hypnoscript-docs/: README.md  package-lock.json  package.json
hypnoscript-lexer-parser/: Cargo.toml
hypnoscript-lexer-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  token.rs
hypnoscript-runtime/: Cargo.toml
hypnoscript-runtime/src/: advanced_string_builtins.rs  api_builtins.rs  array_builtins.rs  builtin_trait.rs  cli_builtins.rs  collection_builtins.rs  core_builtins.rs  data_builtins.rs  deepmind_builtins.rs  dictionary_builtins.rs  file_builtins.rs  hashing_builtins.rs  lib.rs  localization.rs  math_builtins.rs  service_builtins.rs  statistics_builtins.rs  string_builtins.rs  system_builtins.rs  time_builtins.rs  validation_builtins.rs
hypnoscript-tests/: medium_test.hyp  simple_test.hyp  test.hyp  test_advanced.hyp  test_all_new_features.hyp  test_assertions.hyp  test_async.hyp  test_async_system.hyp  test_basic.hyp  test_channels.hyp  test_compiler.hyp  test_comprehensive.hyp  test_enterprise_features.hyp  test_enterprise_v3.hyp  test_extended_builtins.hyp  test_extended_features.hyp  test_new_features.hyp  test_new_language_features.hyp  test_parallel_execution.hyp  test_pattern_matching.hyp  test_pendulum_debug.hyp  test_rust_demo.hyp  test_scoping.hyp  test_simple.hyp  test_simple_features.hyp  test_simple_new_features.hyp  test_tranceify.hyp
scripts/: README.md  build_deb.sh  build_linux.ps1  build_macos.ps1  build_winget.ps1  sync-version.ps1  winget-manifest.yaml
template/: README.md  trance.json
(+158 files in other folders)
