[workspace]
resolver = "2"
members = [
    "hypnoscript-core",
    "hypnoscript-lexer-parser",
    "hypnoscript-compiler",
    "hypnoscript-runtime",
    "hypnoscript-cli",
]

[workspace.package]
version = "1.0.0-rc3"
edition = "2024"
authors = ["Kink Development Group"]
license = "MIT"
repository = "https://github.com/Kink-Development-Group/hyp-runtime"

[workspace.dependencies]
# Core dependencies shared across workspace
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
csv = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
