[package]
name = "hypnoscript-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hypnoscript-core = { path = "../hypnoscript-core" }
hypnoscript-lexer-parser = { path = "../hypnoscript-lexer-parser" }
hypnoscript-compiler = { path = "../hypnoscript-compiler" }
hypnoscript-runtime = { path = "../hypnoscript-runtime" }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
semver = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2.9", features = ["json"] }
tempfile = "3.10"
