[package]
name = "hypnoscript-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hypnoscript-core = { path = "../hypnoscript-core" }
hypnoscript-lexer-parser = { path = "../hypnoscript-lexer-parser" }
hypnoscript-runtime = { path = "../hypnoscript-runtime" }
anyhow = { workspace = true }
thiserror = { workspace = true }
