[package]
name = "hypnoscript-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hypnoscript-core = { path = "../hypnoscript-core" }
hypnoscript-lexer-parser = { path = "../hypnoscript-lexer-parser" }
hypnoscript-runtime = { path = "../hypnoscript-runtime" }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Native code generation backend (Cranelift)
cranelift = "0.110"
cranelift-module = "0.110"
cranelift-jit = "0.110"
cranelift-object = "0.110"
cranelift-native = "0.110"
target-lexicon = "0.12"
