[package]
name = "hypnoscript-lexer-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hypnoscript-core = { path = "../hypnoscript-core" }
serde = { workspace = true }
serde_json = { workspace = true }
