[package]
name = "hypnoscript-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hypnoscript-core = { path = "../hypnoscript-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = "0.4"
regex = "1.10"
num_cpus = "1.16"
hostname = "0.4"
